add caching to project

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
 		<%= @page_title || "Pragmatic Bookself" %>
 	</div>
 
-	<div id="colums">
-		<div class="side">
+	<div id="columns">
+		<div id="side">
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><%= link_to "Home", "/store/index" %></li>
 				<li><a href="#">Questions</a></li>
 				<li><a href="#">News</a></li>
 				<li><a href="#">Contact</a></li>
